Implement modules (in progress)

--- a/TestModule/TestModule.vcxproj
+++ b/TestModule/TestModule.vcxproj
@@ -257,6 +257,7 @@
       <NoEntryPoint>true</NoEntryPoint>
       <AdditionalDependencies>libucrtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OptimizeReferences>true</OptimizeReferences>
+      <ForceSymbolReferences>_nirvana_module</ForceSymbolReferences>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -280,6 +281,7 @@
       <EnableUAC>false</EnableUAC>
       <NoEntryPoint>true</NoEntryPoint>
       <AdditionalDependencies>libucrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ForceSymbolReferences>_nirvana_module</ForceSymbolReferences>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -301,6 +303,7 @@
       <NoEntryPoint>true</NoEntryPoint>
       <AdditionalDependencies>libucrtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OptimizeReferences>true</OptimizeReferences>
+      <ForceSymbolReferences>nirvana_module</ForceSymbolReferences>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -324,6 +327,7 @@
       <EnableUAC>false</EnableUAC>
       <NoEntryPoint>true</NoEntryPoint>
       <AdditionalDependencies>libucrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ForceSymbolReferences>nirvana_module</ForceSymbolReferences>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
