Eliminate local value map

--- a/TestModule/TestModule.vcxproj
+++ b/TestModule/TestModule.vcxproj
@@ -160,6 +160,14 @@
     <ClCompile Include="generated\Test_I3_p.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Core\Test\TestORB\include\I1_factory_dynamic.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I1_factory_portable.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I1_factory_tied.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I1_static.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_dynamic.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_portable.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_tied.h" />
+    <ClInclude Include="..\Core\Test\TestORB\include\I3_static.h" />
     <ClInclude Include="..\Core\Test\TestORB\module\DynamicI1.h" />
     <ClInclude Include="..\Core\Test\TestORB\module\DynamicI3.h" />
     <ClInclude Include="..\Core\Test\TestORB\module\ImplI1.h" />
