--- a/TestProcess/TestProcess.vcxproj
+++ b/TestProcess/TestProcess.vcxproj
@@ -391,6 +391,11 @@
     <ClInclude Include="..\Core\Test\TestORB\include\I3_factory_tied.h" />
     <ClInclude Include="..\Core\Test\TestORB\include\I3_static.h" />
     <ClInclude Include="..\Core\Test\TestORB\include\TestORB.h" />
+    <ClInclude Include="generated\Test_I1.h" />
+    <ClInclude Include="generated\Test_I1_factory.h" />
+    <ClInclude Include="generated\Test_I2.h" />
+    <ClInclude Include="generated\Test_I3.h" />
+    <ClInclude Include="generated\Test_I3_factory.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\Core\Test\TestORB\idl\Test_I1.idl">
